--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -4,7 +4,9 @@ board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
 upload_port = COM3  ; 
-lib_deps = fastled/FastLED
+lib_deps = 
+    fastled/FastLED
+    bblanchon/ArduinoJson @ ^7.0.0
 
 build_unflags = -std=gnu++11
 build_flags = -std=gnu++17
