--- a/client/config.json
+++ b/client/config.json
@@ -1,14 +1,11 @@
 {
-  "com_port": "COM3",
-  "baud_rate": 921600,
-  "num_leds": 124,
-  "monitor_index": 2,
-  "gamma": 2.2,
-  "depth": 100,
-  "leds_per_side": {
-    "left": 17,
-    "top": 46,
-    "right": 17,
-    "bottom": 44
-  }
+    "com_port": "COM3",
+    "esp_ip": "ambilight.local",
+    "monitor_index": 1,
+    "leds_per_side": {
+        "left": 10,
+        "top": 20,
+        "right": 10,
+        "bottom": 20
+    }
 }
