--- a/client/requirements.txt
+++ b/client/requirements.txt
@@ -1,13 +1,8 @@
-altgraph==0.17.5
-mss==10.1.0
+customtkinter==5.2.1
+mss==9.0.1
 numpy==2.3.5
-packaging==25.0
-pefile==2024.8.26
-pillow==12.0.0
-pyinstaller==6.17.0
-pyinstaller-hooks-contrib==2025.10
+Pillow==12.0.0
 pyserial==3.5
 pystray==0.19.5
-pywin32-ctypes==0.2.3
-setuptools==80.9.0
-six==1.17.0
+pyinstaller==6.17.0
+requests==2.32.5
