--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,7 +73,4 @@ jobs:
       - name: release
         uses: softprops/action-gh-release@v2
         with:
-          files: rtr_dir/* 
-           
-
-    
+          files: rtr_dir/**/* 
