infra(client): setup quality gates, ruff integration, and formatting
- Integrated Ruff into CI workflow by adding lint and format checks in client_ci.yml.
- Added ruff to requirements.txt.
- Applied automatic formatting to all Python source files.
- Fixed a potential crash in serial_comm.py by adding a None check.

--- a/.github/workflows/client_ci.yml
+++ b/.github/workflows/client_ci.yml
@@ -8,7 +8,32 @@ on:
         paths:
             - 'client/**'
 jobs:
+    quality:
+      runs-on: ubuntu-latest
+      defaults:
+        run:
+          working-directory: client
+      steps:
+        - name: Checkout Code
+          uses: actions/checkout@v4
+
+        - name: Set up Python
+          uses: actions/setup-python@v5
+          with:
+            python-version: '3.12'
+        
+        - name: Install dependencies
+          run: pip install ruff
+        
+        - name: Check Formatting
+          run: ruff format --check .
+
+        - name: Lint with Ruff
+          run: ruff check . --output-format=github
+        
+
     build:
+        needs: quality
         runs-on: windows-latest
         defaults:
             run:
