ci(client): change artifact retention days to 3

--- a/.github/workflows/client_ci.yml
+++ b/.github/workflows/client_ci.yml
@@ -63,3 +63,4 @@ jobs:
               with:
                 name: Ambilight-Windows-App
                 path: client/dist/AmbilightStudio.exe
+                retention-days: 3
